--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uiball/loaders": "^1.3.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
