--- a/backend/src/.env
+++ b/backend/src/.env
@@ -10,3 +10,5 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 AIRTABLE_API_KEY=key7ZVrWRUc6SjvRf
 AIRTABLE_BASE_ID=app0GGKqlZTu3I8ip
 AIRTABLE_TABLE_NAME=MIRA_USERS
+
+GOOGLE_CLIENT_ID =36978659760-pr8odrn4rf833t9m66j95fdhc2ec9a9d.apps.googleusercontent.com
