--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
